kubernetes/tinyurl-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyurl-app
  namespace: tinyurl
  labels:
    app: tinyurl-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tinyurl-app
  template:
    metadata:
      name: tinyurl-app
      labels:
        app: tinyurl-app
    spec:
      containers:
        - name: tinyurl-app
          image: docker.io/victorduoan/tinyurl:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: tinyurl-app-service
  namespace: tinyurl
spec:
  # type: LoadBalancer # for production
  type: NodePort # for local test
  selector:
    app: tinyurl-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080  # Optional: specify a fixed node port between 30000-32767
