kubernetes/tinyurl-prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyurl-prometheus
  namespace: tinyurl
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyurl-prometheus
  template:
    metadata:
      labels:
        app: tinyurl-prometheus
    spec:
      containers:
        - name: tinyurl-prometheus
          image: prom/prometheus:latest
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: tinyurl-prometheus-config

---
apiVersion: v1
kind: Service
metadata:
  name: tinyurl-prometheus-service
  namespace: tinyurl
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30090
  selector:
    app: tinyurl-prometheus
