kubernetes/tinyurl-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-tinyurl
spec:
  podSelector:
    matchLabels:
      app: tinyurl-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: tinyurl-prometheus
      ports:
        - protocol: TCP
          port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tinyurl-redis-access
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: tinyurl-app
      ports:
        # primary
        - protocol: TCP
          port: 6379
        # sentinel
        - protocol: TCP
          port: 26379
